# CASRegistryNumbers

./: README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  release.yml
src/: casregnum.py
src/casregnum/: __init__.py  casregnum.py  casregnum.pyi
test/: example.py  test.py  test_functionality.py
