[project]
name = "casregnum"
version = "1.1.1"
description = "Python class to manage, check and sort CAS Registry Numbers速 (CAS RN速)"
readme = "README.md"
authors = [
    {name = "Axel M端ller", email = "molshape@gmx.net"},
]
maintainers = [
    {name = "Axel M端ller", email = "molshape@gmx.net"},
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.urls]
Homepage = "https://github.com/molshape/CASRegistryNumbers"
Issues = "https://github.com/molshape/CASRegistryNumbers/issues"
Repository = "https://github.com/molshape/CASRegistryNumbers.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-sugar",
    "pytest-cov",
    "ruff",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
